--- a/.github/workflows/testsrun.yml
+++ b/.github/workflows/testsrun.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           python-version: "3.10"
       - name: Setup dependencies
-        run: python install -r requirements.txt
+        run: pip install -r requirements.txt
       - name: Setup ENV variables
         run: sudo source env.sh
       - name: Run tests
