--- a/.github/workflows/testsrun.yml
+++ b/.github/workflows/testsrun.yml
@@ -19,8 +19,10 @@ jobs:
       - name: Install Python3 venv
         run: sudo apt install python3-venv
       - name: Create ENV
-        run: python3 -m venv env_github
+        run: | 
+          python3 -m venv env_github
+          ls
       - name: Setup ENV
-        run: . /env_github/bin/activate
+        run: . env_github/bin/activate
       - name: Setup ENV variables
         run: . .env.sh
